--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: WelcomeMessage
 main: iSoftMC\WelcomeMessage\Main
 version: 1.3
-api: [3.0.0,2.1.0]
+api: [3.0.0,2.1.0,3.0.0-ALPHA10]
 author: TheAz928
